# zk-benchmarks

./: .gitignore  .gitmodules  BENCHMARKS.md  README.md  cleanup.sh  groth16.html  groth16.sh  halo2.sh  installnoir.sh  package-lock.json  package.json  plonky2.sh  setup.sh
browser-benchmarks/: .env  .gitignore  README.md  awss3.js  benchmarkSnarkjs.js  client.js  fileUtils.js  groth16.html  groth16Client.js  grothClient.js  package-lock.json  package.json  run_benchmarks_parallel.js  test.js
halo2-wasm/: Cargo.toml  README.md
halo2-wasm/src/: lib.rs  wasm.rs
noir-pos/src/: poseidon.nr
noir/src/: DWrapper.nr  main.nr  poseidon.nr  poseidon_constants.nr
