[package]
name = "halo2-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "halo2benchmark"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2_gadgets = { path = "../halo2-benchmarks/halo2_gadgets" }
halo2_proofs = { path = "../halo2-benchmarks/halo2_proofs" }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0"}
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
